--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "fathers-project",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://valentinezigmund.github.io/Fathers",
   "dependencies": {
     "@material-ui/core": "^4.9.1",
     "@material-ui/icons": "^4.9.1",
@@ -10,6 +11,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
+    "gh-pages": "^2.2.0",
     "material-ui-icons": "^1.0.0-beta.36",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
@@ -22,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
