--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "fathers-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ValentineZigmund.github.io/FathersSite/",
+  "homepage": "https://ValentineZigmund.github.io/homepage/",
   "dependencies": {
     "@material-ui/core": "^4.9.1",
     "@material-ui/icons": "^4.9.1",
