Add new functional

--- a/package.json
+++ b/package.json
@@ -4,20 +4,22 @@
   "private": true,
   "homepage": "https://ValentineZigmund.github.io/FathersSite/",
   "dependencies": {
-    "@material-ui/core": "^4.9.1",
+    "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
-    "@material-ui/lab": "^4.0.0-alpha.42",
+    "@material-ui/lab": "^4.0.0-alpha.45",
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
+    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.1.2",
     "bootstrap": "^4.4.1",
     "gh-pages": "^2.2.0",
     "material-ui-icons": "^1.0.0-beta.36",
-    "react": "^16.12.0",
-    "react-bootstrap": "^1.0.0-beta.16",
-    "react-dom": "^16.12.0",
+    "node-sass": "^4.13.1",
+    "react": "^16.13.0",
+    "react-bootstrap": "^1.0.0-beta.17",
+    "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-scroll": "^1.7.16",
     "typeface-roboto": "0.0.75"
   },
   "scripts": {
